--- a/app/css/controller.styl
+++ b/app/css/controller.styl
@@ -3,3 +3,12 @@
   width: 480px
   height: 480px
   margin: 0 auto
+
+#teammates-table
+  position: relative
+  margin: 0 auto
+
+#teammates td
+  width: 50px
+  height: 50px
+  padding: 5px
