Move timer outside of game. Fixes #22.

--- a/app/css/bigscreen.styl
+++ b/app/css/bigscreen.styl
@@ -4,10 +4,13 @@
 
 #scoretable td.player-score,
 #scoretable td.team-score
-  font: 20px
+  font: 20px Arial
   text-align: center
 
-#scoretable
+#timer
+  font: 40px Arial
+
+#state
   vertical-align: top
   display: inline-block
 
