--- a/app/css/bigscreen.styl
+++ b/app/css/bigscreen.styl
@@ -1,11 +1,14 @@
-#scoretable td.player
+td.player
   width: 50px
   height: 50px
   -webkit-animation:fade-in 1s infinite
   -webkit-animation-delay: 0.5s
 
 #scoretable td.player-score,
-#scoretable td.team-score
+#scoretable td.team-score,
+#readytable td.ready-status
+  text-align: center
+  width: 120px
   font: 20px Arial
   text-align: center
   -webkit-animation: fade
