--- a/app/css/controller.styl
+++ b/app/css/controller.styl
@@ -1,3 +1,8 @@
+#death-timer-countdown
+  text-align: center
+  margin: 0 auto
+  font-size: 30px
+
 #container
   position: relative
   width: 480px
