change font loading from webfonts to local file

--- a/app/css/bigscreen.styl
+++ b/app/css/bigscreen.styl
@@ -41,4 +41,10 @@ td.player
     0% { opacity: 1; filter:alpha(opacity=100); }
     50% { opacity: 0; filter:alpha(opacity=0); }
     100% { opacity: 1; filter:alpha(opacity=100); }
+
+  @font-face{
+    font-family: 'Orbitron';
+    src: url('../assets/Orbitron-Regular.ttf');
+    format('truetype');
+  }
 }
