Updated controller screen

--- a/app/css/controller.styl
+++ b/app/css/controller.styl
@@ -3,17 +3,42 @@
   margin: 0 auto
   font-size: 30px
 
+#table, th, td
+  border: 1px solid black
+  border-collapse: collapse
+
 #container
   position: relative
   width: 480px
   height: 480px
   margin: 0 auto
+  align-content: center
+  float: left
 
 #teammates-table
   position: relative
+  width: 200px
+  height: 100px
   margin: 0 auto
+  text-align:center
+  float: left
+
+#score
+  position: relative
+  width: 200px
+  height: 100px
+  margin: auto
+  text-align:center
+  float: left
 
 #teammates td
   width: 50px
   height: 50px
   padding: 5px
+
+#ready
+  position: relative
+  margin: auto
+  width: 100px
+  height: 25px
+  text-align: center
