add title screen. add black border to bullets

--- a/app/css/bigscreen.styl
+++ b/app/css/bigscreen.styl
@@ -9,7 +9,7 @@ td.player
 #readytable td.ready-status
   text-align: center
   width: 120px
-  font: 20px Arial
+  font: 20px Orbitron
   text-align: center
   -webkit-animation: fade
   -webkit-animation-duration: 2s
@@ -21,7 +21,7 @@ td.player
   animation-delay: 0.5s
 
 #timer
-  font: 40px Arial
+  font: 40px Orbitron
 
 #state
   vertical-align: top
