--- a/app/css/bigscreen.styl
+++ b/app/css/bigscreen.styl
@@ -1,8 +1,13 @@
 td.player
   width: 50px
   height: 50px
+  border-style: solid
+  border-width: 4px
+
   -webkit-animation:fade-in 1s infinite
   -webkit-animation-delay: 0.5s
+th
+  font: 20px Orbitron
 
 #scoretable td.player-score,
 #scoretable td.team-score,
