Finished table and controler designs

--- a/app/css/bigscreen.styl
+++ b/app/css/bigscreen.styl
@@ -1,21 +1,27 @@
 td.player
-  width: 50px
-  height: 50px
-  border-style: solid
-  border-width: 4px
-
+  color: yellow
   -webkit-animation:fade-in 1s infinite
   -webkit-animation-delay: 0.5s
 th
   font: 20px Orbitron
+  text-align: center
+  color: yellow
+  background-color: black
+  border: 4px solid black
+  width: 120px
+  height: 40px
+td
+  color: yellow
+  background-color: black
+  text-align: center
+  font: 16px Orbitron
+  border: 4px solid black
+  width: 120px
+  height: 40px
 
 #scoretable td.player-score,
 #scoretable td.team-score,
 #readytable td.ready-status
-  text-align: center
-  width: 120px
-  font: 20px Orbitron
-  text-align: center
   -webkit-animation: fade
   -webkit-animation-duration: 2s
   -webkit-animation-iteration-count: infinite
@@ -27,6 +33,8 @@ th
 
 #timer
   font: 40px Orbitron
+  color: yellow
+  background-color: black
 
 #state
   vertical-align: top
