--- a/app/css/controller.styl
+++ b/app/css/controller.styl
@@ -1,10 +1,13 @@
 #death-timer-countdown
   text-align: center
-  margin: 0 auto
-  font-size: 30px
+  position: absolute
+  margin: -100px 400px
+  font: 20px Orbitron
+  background-color: black
+  color: yellow
 
 #table, th, td
-  border: 1px solid black
+  border: 2px solid black
   border-collapse: collapse
 
 #container
@@ -13,6 +16,7 @@
   height: 480px
   margin: 0 auto
   align-content: center
+  border: 2px solid black
   float: left
 
 #teammates-table
@@ -22,14 +26,18 @@
   margin: 0 auto
   text-align:center
   float: left
+  padding: 10px
+  font: 20px Orbitron
 
 #score
   position: relative
-  width: 200px
-  height: 100px
+  width: 300px
+  height: 110px
   margin: auto
   text-align:center
   float: left
+  padding: 10px
+  font: 20px Orbitron
 
 #teammates td
   width: 50px
@@ -37,8 +45,6 @@
   padding: 5px
 
 #ready
-  position: relative
-  margin: auto
-  width: 100px
-  height: 25px
-  text-align: center
+  position: absolute
+  margin: -100px 360px
+  font: 16px Orbitron
